fix: address code review
- rgw.CreateUser now returns the generated S3 keys; the secret key is an
  EncryptedString (encrypted in outputs, decrypted on reference), matching
  how the AWS/GCP/Azure auth tasks expose generated credentials.
- pools.Create: use toLowerCase(Locale.ROOT) for the pool type.
- Set explicit HTTP connect/read timeouts so a hung dashboard fails fast
  instead of blocking for minutes.
- Document the SnapshotInfo.timestamp format (kept as a raw string).
- CephFetch: List.getFirst() instead of get(0).